--- a/yasmin.html
+++ b/yasmin.html
@@ -8,7 +8,7 @@ Yasmim Chaves Rezende   N°31
 <html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="styleyasmin.css">
+    <link rel="stylesheet" href="styles/styleyasmin.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Yasmin</title>
 </head>
