--- a/portifolioju.html
+++ b/portifolioju.html
@@ -74,14 +74,14 @@ Yasmim Chaves Rezende   N°31
    </main>
 
 
-   <div class="footer">
+<footer>
     <h3>EME Alcina Dantas Feijão</h3>
     <h3>Rua Capivari 500 - Bairro Mauá - São Caetano do Sul - SP</h3>
     <h3>11 4224-0679</h3>
     <a class="insta" href="https://www.instagram.com/juliagabyyya?igsh=YnlodmhxbWE2eGNw">Instagram,</a>
     <a class="face" href="https://www.facebook.com/profile.php?id=100080396003006&mibextid=ZbWKwL">Facebook</a>
     <a class="face" href="Confira Felichy (@felichyphantom): https://x.com/felichyphantom?t=rpF3EvMr4mbSiS-oZ6yQ6A&s=08">Twitter</a>
-    </div>
+   </footer>
 
 
 </body>
