--- a/vanessa.html
+++ b/vanessa.html
@@ -71,15 +71,14 @@ Yasmim Chaves Rezende   N°31
         </section>
    </main>
 
-   <div class="footer">
-    <h3>EME Alcina Dantas Feijão</h3>
+<footer></footer>EME Alcina Dantas Feijão</h3>
     <h3>Rua Capivari 500 - Bairro Mauá - São Caetano do Sul - SP</h3>
     <h3>11 4224-0679</h3>
 
    <a class="rodape_escola_item" href="https://www.instagram.com/vanessaa__ferreiraa/?hl=pt-br">Instagram,   </a>
    <a class="rodape_escola_item" href="https://www.tiktok.com/@vanessaaaa138?lang=pt-BR">Tiktok,   </a>
   <a class="rodape_escola_item" href="https://twitter.com/Vanessa3152941">Twitter.</a>
-  </div>
+</footer>
 
 </body>
 </html>
