--- a/yasmin.html
+++ b/yasmin.html
@@ -69,13 +69,13 @@ Yasmim Chaves Rezende   N°31
 </main>
 
 
-<div class="footer">
+<footer>
 <h3>EME Alcina Dantas Feijão</h3>
 <h3>Rua Capivari 500 - Bairro Mauá - São Caetano do Sul - SP</h3>
 <h3>11 4224-0679</h3>
 <a class="insta" href="https://www.instagram.com/yasrezende_?igsh=MW5rNjlvZTNidnNhdA==">Instagram,</a>
 <a class="face" href="https://www.tiktok.com/@yasrezende_?_t=8lwg6wOlrvS&_r=1">TikTok</a>
-</div>
+</footer>
 
 
 </body>
